--- a/SuperCollider/Help/SwingOSC/JFont.html
+++ b/SuperCollider/Help/SwingOSC/JFont.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of Font. last mod: 16-Jan-08 sciss
+<p>This class is meant as an emulation of Font. last mod: 17-Jul-09 sciss
 </p>
 <table>
 <tr><td colspan="2" class="oscTabSection">no-op / not working</td></tr>
@@ -25,7 +25,7 @@
 <P>&nbsp;</P>
 <h1>JFont</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.font if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://Font">Font</A> if possible!
 </strong></p>
 <P>
 <code><span class="cl">JFont</span></code> is a typeface description that can used with some <A HREF="JSCView.html">JSCView</A> objects to define the type of font used for text rendering. <A HREF="JSCStaticText.html">JSCStaticText</A>, <A HREF="JSCButton.html">JSCButton</A>, <A HREF="JSCView.html">JSCNumberBox</A>, <A HREF="JSCDragView.html">JSCDragView</A>, <A HREF="JSCView.html">JSCDragSink</A>, <A HREF="JSCDragBoth.html">JSCDragBoth</A>, <A HREF="JSCCheckBox.html">JSCCheckBox</A> can set their fonts.
