--- a/SuperCollider/Help/SwingOSC/JFreqScope.html
+++ b/SuperCollider/Help/SwingOSC/JFreqScope.html
@@ -10,12 +10,12 @@
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
 <p>This class is meant as an emulation of FreqScope by Lance Putnam, which is an additional class
-available from <A HREF="http://www.uweb.ucsb.edu/~ljputnam/sc3.html">www.uweb.ucsb.edu/~ljputnam/sc3.html</A>. last mod: 14-apr-07 sciss<BR>For bugs and different behaviour, see also the <A HREF="JStethoscope.html">JStethoscope</A> help file.
+available from <A HREF="http://www.uweb.ucsb.edu/~ljputnam/sc3.html">www.uweb.ucsb.edu/~ljputnam/sc3.html</A>. last mod: 17-jul-09 sciss<BR>For bugs and different behaviour, see also the <A HREF="JStethoscope.html">JStethoscope</A> help file.
 </p>
 </div>
 <h1>JFreqScope</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.freqScope if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://FreqScope">FreqScope</A> if possible!
 </strong></p>
 <P><code><span class="cl">JFreqScope</span></code> shows the frequency spectrum of the specified audio bus. The scope will remain active after a command-period.  To turn it off you must either click off the 'Power' button or close the window.</P>
 <P>Instantiation:</P>
