--- a/SuperCollider/Help/SwingOSC/JKnob.html
+++ b/SuperCollider/Help/SwingOSC/JKnob.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<P>This class is meant as an emulation of the Knob class by blackrain. last mod: 03-feb-08 sciss<br>Also refer to <A HREF="JSCView.html">JSCView</A> and <A HREF="JSCUserView.html">JSCUserView</A>.
+<P>This class is meant as an emulation of the Knob class by blackrain. last mod: 17-jul-09 sciss<br>Also refer to <A HREF="JSCView.html">JSCView</A> and <A HREF="JSCUserView.html">JSCUserView</A>.
 </p>
 <table>
 <!-- <tr><td colspan="2" class="oscTabSection">no-op / not working</td></tr>
@@ -24,9 +24,9 @@
 </div>
 <P>&nbsp;</P>
 <h1>JKnob</h1>
-<!-- <p><strong>
-Note: please use the abstraction layer GUI.knob if possible! (see <A HREF="SC://GUI">GUI</A>)
-</strong></p> -->
+<p><strong>
+Note: please use the abstraction layer <A HREF="SC://Knob">Knob</A> if possible!
+</strong></p>
 <P><code><span class="cl">JKnob</span></code> is a gui control with round, horizontal or vertical action.
 </P>
 <h2>Instantiation</h2>
