--- a/SuperCollider/Help/SwingOSC/JPen.html
+++ b/SuperCollider/Help/SwingOSC/JPen.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of Pen. last mod: 14-jul-09 sciss
+<p>This class is meant as an emulation of Pen. last mod: 17-jul-09 sciss
 </p>
 <table>
 <tr><td colspan="2" class="oscTabSection">no-op / not working</td></tr>
@@ -29,7 +29,7 @@
 <P>&nbsp;</P>
 <h1>JPen</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.pen if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://Pen">Pen</A> if possible!
 </strong></p>
 <P>
 A helper class to draw on a <A HREF="JSCWindow.html">JSCWindow</A>, a <A HREF="JSCUserView.html">JSCUserView</A>, or a <A HREF="JSCTabletView.html">JSCTabletView</A>. It cannot be instantiated but only provides static methods.
