--- a/SuperCollider/Help/SwingOSC/JSC2DSlider.html
+++ b/SuperCollider/Help/SwingOSC/JSC2DSlider.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SC2DSlider. last mod: 25-nov-07 sciss
+<p>This class is meant as an emulation of SC2DSlider. last mod: 17-jul-09 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
@@ -25,7 +25,7 @@
 <P>&nbsp;</P>
 <h1>JSC2DSlider</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.slider2D if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://Slider2D">Slider2D</A> if possible!
 </strong></p>
 <P>
 A rectangular element that allows you to control two parameters simultaneously by moving a knob horizontally and vertically.
