--- a/SuperCollider/Help/SwingOSC/JSCButton.html
+++ b/SuperCollider/Help/SwingOSC/JSCButton.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCButton. last mod: 12-jan-08 sciss
+<p>This class is meant as an emulation of SCButton. last mod: 17-jul-09 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
@@ -24,7 +24,7 @@
 <P>&nbsp;</P>
 <h1>JSCButton</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.button if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://Button">Button</A> if possible!
 </strong></p>
 <P>
 A push button gadget with support for multiple states (labels/colours). Each state is defined as an array
