--- a/SuperCollider/Help/SwingOSC/JSCCheckBox.html
+++ b/SuperCollider/Help/SwingOSC/JSCCheckBox.html
@@ -9,10 +9,13 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
+<p>Last mod: 17-jul-09 sciss
+<br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
+</p>
 </div>
 <h1>JSCCheckBox</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.checkBox if possible! (see <A HREF="SC://GUI">GUI</A>).</strong> See also <A HREF="JSCView.html">JSCView</A>.
+Note: please use the abstraction layer GUI.checkBox if possible! (see <A HREF="SC://GUI">GUI</A>).</strong>
 </p>
 <P>
 A check box view is a toggle button displaying either clear (value = false) or checked (value = true).
