--- a/SuperCollider/Help/SwingOSC/JSCDragBoth.html
+++ b/SuperCollider/Help/SwingOSC/JSCDragBoth.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCDragSource / SCDragSink / SCDragBoth. last mod: 30-jan-08 sciss
+<p>This class is meant as an emulation of SCDragSource / SCDragSink / SCDragBoth. last mod: 17-jul-09 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
@@ -23,7 +23,7 @@
 <P>&nbsp;</P>
 <h1>JSCDragSink, JSCDragSink, JSCDragBoth</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.dragSource / .dragSink / .dragBoth if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://DragSource">DragSource</A> / <A HREF="SC://DragSink">DragSink</A> / <A HREF="SC://DragBoth">DragBoth</A> if possible!
 </strong></p>
 <P>
 Drag+Drop Gadgets ; <CODE><SPAN CLASS="cl">JSCDragSource</SPAN></CODE> can be a source of a drag gesture, <CODE><SPAN CLASS="cl">JSCDragSink</SPAN></CODE> can be a target of a drag gesture. <CODE><SPAN CLASS="cl">JSCDragBoth</SPAN></CODE> combines both a source and a target.
