--- a/SuperCollider/Help/SwingOSC/JSCListView.html
+++ b/SuperCollider/Help/SwingOSC/JSCListView.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCListView. last mod: 16-Jan-08 sciss
+<p>This class is meant as an emulation of SCListView. last mod: 17-jul-09 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
@@ -24,7 +24,7 @@
 <p>&nbsp;</p>
 <h1>JSCListView</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.listView if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://ListView">ListView</A> if possible!
 </strong></p>
 <P>
 The list view displays a top-down list of text <code>items</code>. When there are more items than fit into the bounding box, a vertical scrollbar is displayed. The <code>value</code> of the gadget reflects the selected item's index. For similar functionality in a collapsed view, see <A HREF="JSCPopUpMenu.html">JSCPopUpMenu</A>.
