--- a/SuperCollider/Help/SwingOSC/JSCMultiSliderView.html
+++ b/SuperCollider/Help/SwingOSC/JSCMultiSliderView.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCMultiSliderView. last mod: 16-Jan-08 sciss
+<p>This class is meant as an emulation of SCMultiSliderView. last mod: 17-jul-09 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
@@ -30,7 +30,7 @@
 <p>&nbsp;</p>
 <h1>JSCMultiSliderView</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.multiSliderView if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://MultiSliderView">MultiSliderView</A> if possible!
 </strong></p>
 <P>
 A complex and highly customizable view that can display an array of numbers as sliders, boxes, or a kind of sample table.
