--- a/SuperCollider/Help/SwingOSC/JSCPopUpMenu.html
+++ b/SuperCollider/Help/SwingOSC/JSCPopUpMenu.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCPopUpMenu. last mod: 04-apr-07 sciss
+<p>This class is meant as an emulation of SCPopUpMenu. last mod: 17-jul-09 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
@@ -28,7 +28,7 @@
 <P>&nbsp;</P>
 <h1>JSCPopUpMenu</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.popUpMenu if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://PopUpMenu">PopUpMenu</A> if possible!
 </strong></p>
 <P>
 A button element to which a list of items is attached. The item list gets pop'ed up when you click on the button. The currently selected item is displayed in the button.
