--- a/SuperCollider/Help/SwingOSC/JSCScope.html
+++ b/SuperCollider/Help/SwingOSC/JSCScope.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCFreqScope. last mod: 03-oct-06 sciss
+<p>This class is meant as an emulation of SCFreqScope. last mod: 17-jul-09 sciss
 ; for bugs and different behaviour, see also the <A HREF="JStethoscope.html">JStethoscope</A> help file.
 </p>
 <!-- <table> -->
@@ -22,7 +22,7 @@
 </div>
 <h1>JSCScope</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.scopeView if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://ScopeView">ScopeView</A> if possible!
 </strong></p>
 <p>
 <code><span class="cl">JSCScope</span></code> shows a realtime view of a buffer, with horizontal axis corresponding to time (buffer frame offset) and vertical axis corresponding to amplitude. Most likely you will want to use <A HREF="JStethoscope.html">JStethoscope</A> instead which handles window creation, buffer recording from any input bus, and keyboard control. <code><span class="cl">JSCScope</span></code> can be useful if you want to combine it with other custom views, as shown in the following example:
