--- a/SuperCollider/Help/SwingOSC/JSCSlider.html
+++ b/SuperCollider/Help/SwingOSC/JSCSlider.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCSlider. last mod: 30-jul-07 sciss
+<p>This class is meant as an emulation of SCSlider. last mod: 17-jul-09 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
@@ -26,7 +26,7 @@
 <P>&nbsp;</P>
 <h1>JSCSlider</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.slider if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://Slider">Slider</A> if possible!
 </strong></p>
 <P>
 The slider is a general controller for a one-dimensional value. The sliders value is normalized in the range of 0 ... 1 which corresponds to the slider's knob being maximally left / bottom and maximally right / top.
