--- a/SuperCollider/Help/SwingOSC/JSCSoundFileView.html
+++ b/SuperCollider/Help/SwingOSC/JSCSoundFileView.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCSoundFileView. last mod: 17-oct-08 sciss
+<p>This class is meant as an emulation of SCSoundFileView. last mod: 17-jul-09 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
@@ -38,7 +38,7 @@
 <P>&nbsp;</P>
 <h1>JSCSoundFileView</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.soundFileView if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://SoundFileView">SoundFileView</A> if possible!
 </strong></p>
 <P><STRONG>Note: this implementation is slightly incomplete!</STRONG></P>
 <P>
