--- a/SuperCollider/Help/SwingOSC/JSCStaticText.html
+++ b/SuperCollider/Help/SwingOSC/JSCStaticText.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCStaticText. last mod: 17-oct-08 sciss
+<p>This class is meant as an emulation of SCStaticText. last mod: 17-jul-09 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
@@ -25,7 +25,7 @@
 <P>&nbsp;</P>
 <h1>JSCStaticText</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.staticText if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://StaticText">StaticText</A> if possible!
 </strong></p>
 <P>
 A non-editable static text (label) field.
