--- a/SuperCollider/Help/SwingOSC/JSCTextField.html
+++ b/SuperCollider/Help/SwingOSC/JSCTextField.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCTextField. last mod: 06-apr-09 sciss
+<p>This class is meant as an emulation of SCTextField. last mod: 17-jul-09 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
@@ -25,7 +25,7 @@
 <P>&nbsp;</P>
 <h1>JSCTextField</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.textField if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://TextField">TextField</A> if possible!
 </strong></p>
 <P>
 A textfield allows the user to type in a line of arbitrary text (string) data.
