--- a/SuperCollider/Help/SwingOSC/JSCUserView.html
+++ b/SuperCollider/Help/SwingOSC/JSCUserView.html
@@ -26,7 +26,7 @@
 <P>&nbsp;</P>
 <h1>JSCUserView</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.userView if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://UserView">UserView</A> if possible!
 </strong></p>
 <P>
 <code><span class="cl">JSCUserView</span></code> is a user-definable view intended mainly for use with JPen and drawHooks.</P>
