--- a/SuperCollider/Help/SwingOSC/JSCView.html
+++ b/SuperCollider/Help/SwingOSC/JSCView.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<P>This class is meant as an emulation of SCView. last mod: 18-May-09 sciss
+<P>This class is meant as an emulation of SCView. last mod: 17-jul-09 sciss
 </p>
 <table>
 <!-- <tr><td colspan="2" class="oscTabSection">no-op / not working</td></tr>
@@ -32,7 +32,7 @@
 <P>&nbsp;</P>
 <h1>JSCView</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.view if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://View">View</A> if possible!
 </strong></p>
 <P><code><span class="cl">JSCView</span></code> is the abstract superclass for all SC GUI widgets, using a <A HREF="SwingOSC.html">SwingOSC</A> java server. Several key methods and variables are defined in <code><span class="cl">JSCView</span></code> and inherited in its subclasses. For a list of subclasses, refer to the <A HREF="CocoaVsJava.html">CocoaVsJava</A> help document.
 </P>
