--- a/SuperCollider/Help/SwingOSC/JSCWindow.html
+++ b/SuperCollider/Help/SwingOSC/JSCWindow.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCWindow. last mod: 19-Jan-09 sciss
+<p>This class is meant as an emulation of SCWindow. last mod: 19-jul-09 sciss
 </p>
 <table>
 <tr><td colspan="2" class="oscTabSection">no-op / not working</td></tr>
@@ -31,7 +31,7 @@
 <P>&nbsp;</P>
 <h1>JSCWindow</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.window if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://Window">Window</A> if possible!
 </strong></p>
 <P>
 A class representing a user interface window. See also <A HREF="JSCView.html">JSCView</A> to learn about the gadgets that can populate a window.
