--- a/SuperCollider/Help/SwingOSC/SwingDialog.html
+++ b/SuperCollider/Help/SwingOSC/SwingDialog.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<P>This class is meant as an emulation of CocoaDialog. last mod: 14-apr-07 sciss
+<P>This class is meant as an emulation of CocoaDialog. last mod: 17-jul-09 sciss
 </p>
 <table>
 <!-- <tr><td colspan="2" class="oscTabSection">no-op / not working</td></tr>
@@ -25,7 +25,7 @@
 <P>&nbsp;</P>
 <h1>SwingDialog</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.dialog if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://Dialog">Dialog</A> if possible!
 </strong></p>
 <P><code><span class="cl">SwingDialog</span></code> is a factory class for displaying file selection dialogs.
 </P>
