--- a/SuperCollider/Help/SwingOSC/JSCCompositeView.html
+++ b/SuperCollider/Help/SwingOSC/JSCCompositeView.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCCompositeView. last mod: 18-May-09 sciss
+<p>This class is meant as an emulation of SCCompositeView. last mod: 17-jul-09 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
@@ -23,7 +23,7 @@
 <P>&nbsp;</P>
 <h1>JSCCompositeView</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.compositeView if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://CompositeView">CompositeView</A> if possible!
 </strong></p>
 <P>
 A composite view is a container that contains other views. This allows you for example to show and hide all children of that composite view or to attach a certain <A HREF="SC://resize">resize</A> behaviour to the composite view.
