--- a/SuperCollider/Help/SwingOSC/JSCFreqScope.html
+++ b/SuperCollider/Help/SwingOSC/JSCFreqScope.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCFreqScope. last mod: 03-oct-06 sciss
+<p>This class is meant as an emulation of SCFreqScope. last mod: 17-jul-09 sciss
 ; for bugs and different behaviour, see also the <A HREF="JStethoscope.html">JStethoscope</A> help file.
 </p>
 <!-- <table> -->
@@ -22,7 +22,7 @@
 </div>
 <h1>JSCFreqScope</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.freqScope if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://FreqScopeView">FreqScopeView</A> if possible!
 </strong></p>
 <p>
 <code>JSCFreqScope</code> shows the frequency spectrum of a specified audio bus.  The scope will remain active after a command-period. To turn it off you must use the 'active' method. See also: <A HREF="JFreqScope.html">JFreqScope</A>, <A HREF="JSCView.html">JSCView</A>.
