--- a/SuperCollider/Help/SwingOSC/JSCNumberBox.html
+++ b/SuperCollider/Help/SwingOSC/JSCNumberBox.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCNumberBox. last mod: 16-Jan-08 sciss
+<p>This class is meant as an emulation of SCNumberBox. last mod: 17-jul-09 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
@@ -29,7 +29,7 @@
 <P>&nbsp;</P>
 <h1>JSCNumberBox</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.numberBox if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://NumberBox">NumberBox</A> if possible!
 </strong></p>
 <P>
 A view to type in integer or decimals numbers.
