--- a/SuperCollider/Help/SwingOSC/JSCRangeSlider.html
+++ b/SuperCollider/Help/SwingOSC/JSCRangeSlider.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCRangeSlider. last mod: 25-nov-07 sciss
+<p>This class is meant as an emulation of SCRangeSlider. last mod: 17-jul-09 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
@@ -27,7 +27,7 @@
 <P>&nbsp;</P>
 <h1>JSCRangeSlider</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.rangeSlider if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://RangeSlider">RangeSlider</A> if possible!
 </strong></p>
 <P>
 A range slider is like a normal slider but instead of a fixed-size knob, the knob has a variable extent. The value of the range slider is represented by a 'lo' and a 'hi' component, both being normalized to range 0 ... 1 which corresponds to maximally left / bottom and maximally right / top.
