--- a/SuperCollider/Help/SwingOSC/JSCTextView.html
+++ b/SuperCollider/Help/SwingOSC/JSCTextView.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCTextView. last mod: 21-may-09 sciss
+<p>This class is meant as an emulation of SCTextView. last mod: 17-jul-09 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
@@ -34,7 +34,7 @@
 <P>&nbsp;</P>
 <h1>JSCTextView</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.textView if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://TextView">TextView</A> if possible!
 </strong></p>
 <P>
 A text view can display a large body of text, either plain or with attributes (such as in HTML). It can also be used to edit multiline text.
