--- a/SuperCollider/Help/SwingOSC/JSCVLayoutView.html
+++ b/SuperCollider/Help/SwingOSC/JSCVLayoutView.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCHLayoutView. last mod: 30-jul-07 sciss
+<p>This class is meant as an emulation of SCHLayoutView. last mod: 17-jul-09 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <!-- <table> -->
@@ -21,7 +21,7 @@
 </div>
 <h1>JSCVLayoutView</h1>
 <p><strong>
-Note: please use the abstraction layer GUI.hLayoutView if possible! (see <A HREF="SC://GUI">GUI</A>)
+Note: please use the abstraction layer <A HREF="SC://VLayoutView">VLayoutView</A> if possible!
 </strong></p>
 <P>
 A container view that lays out all its children vertically from top to bottom. For the horizontal version, see <A HREF="JSCHLayoutView.html">JSCHLayoutView</A>.
