JSCSynth now works for remote SwingOSC servers. That means metering works. However other scsynth interaction as scope and freqScope that have a more low level implementation need to wait for a switch to JCollider still.

--- a/readme.html
+++ b/readme.html
@@ -202,7 +202,7 @@ The <code>&quot;test&quot;</code> will just launch SwingOSC so you can see if th
 <LI>add some nice stuff like tree view ...</LI>
 </UL>
 <h3>change history</h3>
-<h4>v0.62 jul 2009 - SVN rev. 207)</h4>
+<h4>v0.62 (jul 2009 - SVN rev. 207)</h4>
 <UL>
 <LI>SC classes: JSCView (mouse coordinates now relative to view's left-top, added scheme), JSCUserView (added clearDrawing, refresh is &quot;lazy&quot;, mousePosition initially reports 0@0), JSCImage (renamed from JImage), JPen (added fillAxialGradient, fillStroke uses draw( 3 )), JKnob (added resize(_)), JSCPeakMeter finally works</LI>
 <LI>Bug fixes: 2809848, 2809958, 2001007, 2820992, 1901530</LI>
