--- a/readme.html
+++ b/readme.html
@@ -88,7 +88,7 @@ TD.when {
 </HEAD>
 <BODY>
 <h1>
-SwingOSC <small>-- version 0.63pre SVN --</small>
+SwingOSC <small>-- version 0.63 --</small>
 </h1>
 <h3>statement</h3>
 <TABLE><TR><TD VALIGN="top"><IMG SRC="application.png" ALT=""></TD><TD><p>
@@ -202,6 +202,12 @@ The <code>&quot;test&quot;</code> will just launch SwingOSC so you can see if th
 <LI>add some nice stuff like tree view ...</LI>
 </UL>
 <h3>change history</h3>
+<h4>v0.63 (oct 2009 - SVN rev. 218)</h4>
+<UL>
+<LI>SC classes: JSCPeakMeter (added setRefreshRate, more CPU efficient peak metering), JSCScrollView (faster mouse wheel scrolling on osx and windows), JSCMovieView (mouse and keyboard events now enabled)</LI>
+<LI>Tutorial: updating Spinner class</LI>
+<LI>Improved support for remote servers</LI>
+</UL>
 <h4>v0.62 (jul 2009 - SVN rev. 207)</h4>
 <UL>
 <LI>SC classes: JSCView (mouse coordinates now relative to view's left-top, added scheme), JSCUserView (added clearDrawing, refresh is &quot;lazy&quot;, mousePosition initially reports 0@0), JSCImage (renamed from JImage), JPen (added fillAxialGradient, fillStroke uses draw( 3 )), JKnob (added resize(_)), JSCPeakMeter finally works</LI>
