changed boxColor to background, as former is deprecated

--- a/SuperCollider/Help/SwingOSC/JSCNumberBox.html
+++ b/SuperCollider/Help/SwingOSC/JSCNumberBox.html
@@ -48,7 +48,7 @@ A view to type in integer or decimals numbers.
 <span class="cm">// does not do the action</span>
 b.value = rrand( 1, 15 );
 
-b.boxColor = <span class="cl">Color</span>.grey;
+b.background = <span class="cl">Color</span>.grey;
 b.stringColor = <span class="cl">Color</span>.green;
 b.align = <span class="sy">\center</span>;
 
